fix: set dependency compatibility

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,6 +6,9 @@
 </head>
 <body>
 <p>Bean Scopes: </p>
+<ul>
+    <li>Application: #{applicantController}</li>
+</ul>
 <br/>
 <a href="hello-servlet">Hello Servlet</a>
 </body>
