--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,15 +1,21 @@
-<%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
 <!DOCTYPE html>
-<html>
-<head>
-    <title>JSP - Hello World</title>
-</head>
-<body>
-<p>Bean Scopes: </p>
-<ul>
-    <li>Application: #{applicantController}</li>
-</ul>
-<br/>
-<a href="hello-servlet">Hello Servlet</a>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html">
+<h:head>
+    <title>JSF - Hello World</title>
+</h:head>
+<h:body>
+    <h1>JSF 2.0: Application</h1>
+    <p>Bean Scopes: </p>
+    <ul>
+        <li>Application: #{applicantController}</li>
+    </ul>
+
+    <p>
+        Server Name: #{request.serverName}
+    </p>
+    <h:outputText value="#{request.serverName}"/>
+    <br/>
+    <h:link value="Hello Servlet" outcome="hello-servlet"/>
+</h:body>
 </html>
